# machinegen

./: .gitignore  Cargo.toml  README.md  TODO.md
config/tables/: files.tsv  readme.md  replace.tsv  templates.tsv
src/: build.rs  debug.rs  main.rs  types.rs  util.rs
